--- a/book-commands.tex
+++ b/book-commands.tex
@@ -76,4 +76,7 @@
 \newcommand{\weight}{\textsl{p}} % Peso
 \newcommand{\xyz}{\vec{r}\hspace{0.05cm}} % Trayectoria [x(t),y(t),z(t)]
 \newcommand{\cstcoulomb}{k_e} % Constante de Coulomb
-\newcommand{\V}{\scale{1.2}{v}} % Tensión eléctrica
+\newcommand{\voltage}{\scale{1.2}{v}} % Tensión eléctrica
+\newcommand{\current}{\scale{1.2}{i}} % Corriente eléctrica
+\newcommand{\impedance}{\scale{1.2}{z}} % Impedancia eléctrica
+\newcommand{\ohm}{\si{\ohm}}
