--- a/main.tex
+++ b/main.tex
@@ -1837,6 +1837,13 @@ Esto es, considerando $f << f_0$ se tiene que $1 << \bb{\tfrac{\omega_0}{\omega}
     L_H \approx 20 \, \log \bb{\frac{\omega}{\omega_0}}
 \end{equation*}
 
+Pudiendo comparar ambas respuestas en frecuencia en el siguiente gráfico
+
+\begin{center}
+    \def\svgwidth{\linewidth}
+    \input{./images/filtros-func-transfer.pdf_tex}
+\end{center}
+
 
 \subsection{Filtros R-L}
 
