--- a/book-commands.tex
+++ b/book-commands.tex
@@ -13,8 +13,8 @@
 
 % COMANDOS PARA NOTACIÓN DE FUNCIONES
 \newcommand{\barrow}[3]{\begin{bmatrix} \left. #1 \right|_{#2}^{#3} \end{bmatrix}} % Regla de Barrow de #1 para los extremos de integración #2 y #3
-\newcommand{\fx}[2][f]{#1 \hspace{-0.5mm} \left( #2 \right)} % #1 en función de #2 con paréntesis
-\newcommand{\ffx}[2][f]{#1 \hspace{-0.5mm} \begin{bmatrix} #2 \end{bmatrix}} % #1 en función de #2 con corchetes
+\newcommand{\fx}[2]{#1 \hspace{-0.5mm} \left( #2 \right)} % #1 en función de #2 con paréntesis
+\newcommand{\xn}[2]{#1 \hspace{-0.5mm} \begin{bmatrix} #2 \end{bmatrix}} % #1 en función de #2 con corchetes
 \newcommand{\intProd}[2]{<\hspace{-0.8mm}#1,#2\hspace{-0.8mm}>} % Producto interno entre #1 y #2
 \newcommand{\comb}[2]{\begin{pmatrix} {#1}\\{#2} \end{pmatrix}} % Combinatorio n=#1, m=#2
 \newcommand{\media}[2]{\underset{#2}{\sub{#1}{med}}} % #1 media entre #2
